# trame-bbox

./: README.md  pyproject.toml
.github/workflows/: create_release.yaml
examples/: animation.py  requirements.txt
trame/modules/: bbox.py
trame/widgets/: bbox.py
trame_bbox/module/: __init__.py
trame_bbox/widgets/: bbox.py
vue-components/: package-lock.json  package.json  vite.config.js
vue-components/src/components/: Bbox.js  index.js
